# euROBIN_WP1_collection

./: README.md  ddeploy_readme.md
fhg_pitasc/: fhg_ipa.md  ipa_documentation.md
fhg_pitasc/CAD_Files/: Greifer_v02.SLDASM  Greifer_v02.SLDPRT  Greifer_v02.STL
jsi_abr/: abr_solution.md
tecnalia_teaching/: robouton_readme.md
tum_ur5e/: README.md
tum_ur5e/assets/stl/: RoboPig_CableHook.stl  RoboPig_CableHookHolder.stl
tum_ur5e/kopro_ur_resources/: README.md
tum_ur5e/kopro_ur_ros_treiber/: CMakeLists.txt  README.md  package.xml
tum_ur5e/kopro_ur_ros_treiber/config/: ur5e_controllers.yaml
tum_ur5e/kopro_ur_ros_treiber/include/ur_ros_driver/: dashboard_client.hpp  hw_interface.hpp  robotiq_gripper_interface.hpp  ros_color_stream.hpp
tum_ur5e/kopro_ur_ros_treiber/launch/: full_driver.launch  ur_driver.launch
tum_ur5e/kopro_ur_ros_treiber/msg/: DashboardInfo.msg  GripperInfo.msg  JogControl.msg  PathEntry.msg
tum_ur5e/kopro_ur_ros_treiber/src/: dashboard_client.cpp  hw_interface.cpp  robotiq_gripper_interface.cpp
tum_ur5e/kopro_ur_ros_treiber/srv/: GetGripperCalib.srv  GetTimeStamp.srv  Log.srv  Power.srv  SetCartTarget.srv  SetContactTarget.srv  SetForceTarget.srv  SetFreedrive.srv  SetGripper.srv  SetJointTarget.srv  SetPayload.srv  SetRelCartTarget.srv  SetSpeedSlider.srv  SetTrajectory.srv  StartJog.srv
tum_ur5e/robothon2023/: CMakeLists.txt  README.md  package.xml
tum_ur5e/robothon2023/config/: Taskboard.dae  rviz_config.rviz  tf2.json
tum_ur5e/robothon2023/include/robothon2023/: eigen_json.hpp  task_board_tasks.hpp
tum_ur5e/robothon2023/launch/: taskboard_core.launch  taskboard_touchDetect.launch
tum_ur5e/robothon2023/src/: board_detection.py  ids_camera.cpp  point_recording.cpp  readOscilloscope.py  task_board_scheduler.cpp  task_board_tasks.cpp  tf2_publisher.cpp  touchDetection.cpp  triangle_lab.py
tum_ur5e/robothon2023/srv/: AddTf2.srv  CheckComponents.srv  GetBeep.srv  GetBoardLocation.srv  GetTriangles.srv
